# Lets-Go-Travel

./: .gitignore  CNAME  README.md  index.html  l10n.yaml  pubspec.yaml  test-plan.md  test-report.md
.github/workflows/: deploy-pages.yml
android/app/: build.gradle.kts
backend/: .env.example  fly.toml  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: ai.py  flights.py  health.py  hotels.py
blog/: august-2026.html  cheap-flights-tips.html  georgia-guide.html  turkey-2026.html  visa-free-2026.html
bot/: .env.example  Dockerfile  fly.toml  pyproject.toml
bot/bot/: config.py  handlers.py  main.py  services.py
docs/: index.html  privacy-policy.html  terms-of-service.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ru.dart  app_ru.arb
lib/models/: flight.dart  hotel.dart
lib/providers/: locale_provider.dart  search_provider.dart  theme_provider.dart
lib/screens/: ai_planner_screen.dart  flights_screen.dart  home_screen.dart  hotels_screen.dart  onboarding_screen.dart  privacy_policy_screen.dart  settings_screen.dart  splash_screen.dart  terms_screen.dart
lib/services/: ai_service.dart  analytics_service.dart  travel_api_service.dart
lib/utils/: constants.dart  helpers.dart  theme.dart
lib/widgets/: app_logo.dart  cross_promo_widget.dart  flight_card.dart  (+1 more)
linux/: CMakeLists.txt
site/: index.html  robots.txt  sitemap.xml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+12 files in other folders)
