[project]
name = "lets-go-travel-bot"
version = "1.0.0"
description = "Let's Go Travel Telegram Bot — AI trip planner with affiliate search"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15.0,<4.0",
    "aiohttp>=3.11.0,<4.0",
    "google-genai>=1.14.0,<2.0",
    "python-dotenv>=1.0.0,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[project.scripts]
bot = "bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
